--- a/src/assets/css/tailwind.css
+++ b/src/assets/css/tailwind.css
@@ -88,8 +88,8 @@
   }
 
   .link {
-    @apply text-blue-600 hover:text-purple-600 focus:text-purple-600 dark:text-blue-400 dark:hover:text-yellow-500
-      dark:focus:text-yellow-500 hover:underline focus:underline transition-all;
+    @apply text-red-900 hover:text-red-1000 focus:text-red-1000 dark:text-red-900 dark:hover:text-red-1000
+      dark:focus:text-white hover:underline focus:underline transition-all;
   }
 
   .link-black {
