--- a/src/assets/css/global/all.css
+++ b/src/assets/css/global/all.css
@@ -11,6 +11,9 @@ body {
 
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-family: 'DM Sans', sans-serif;
+  height: 100vh;
+  overflow-x: hidden;
 }
 
 html {
@@ -45,9 +48,13 @@ input[type='number'] {
 }
 
 *::-webkit-scrollbar {
-  @apply bg-gray-50 dark:bg-gray-900;
+  @apply bg-transparent;
 }
 
 *::-webkit-scrollbar-thumb {
-  @apply bg-gray-200 dark:bg-gray-700;
+  @apply bg-gray-200 dark:bg-gray-650;
+}
+
+::-webkit-scrollbar-corner {
+  background: rgb(0 0 0 / 0%);
 }
